:fire:update texv2

--- a/report/report.tex
+++ b/report/report.tex
@@ -35,7 +35,7 @@
 \usepackage{graphicx}       %%  图片包
 \usepackage{geometry}
 
-\title{Reproduction of ``Fast and Accurate Matrix Completion via Truncated Nuclear Norm Regularization``}
+\title{Reproduction of ``Fast and Accurate Matrix Completion via Truncated Nuclear Norm Regularization''}
 
 
 % The \author macro works with any number of authors. There are two commands
