:fire:update texv2

--- a/report/report.tex
+++ b/report/report.tex
@@ -52,7 +52,7 @@
     % about author (webpage, alternative address)---\emph{not} for acknowledging
     % funding agencies.} \\
     Sun Yat-sen University \\
-  \texttt{hippo@cs.cranberry-lemon.edu} \\
+  \texttt{liuzhy86@mail2.sysu.edu.cn} \\
   % examples of more authors
   \and
   Xin-Hua Zheng \\
