:sunglasses:fix equations

--- a/report/report.bib
+++ b/report/report.bib
@@ -14,7 +14,7 @@
   shorttitle = {Euclidean {{Distance Matrices}}},
   author = {Dokmanic, Ivan and Parhizkar, Reza and Ranieri, Juri and Vetterli, Martin},
   date = {2015-11},
-  journaltitle = {IEEE Signal Processing Magazine},
+  journal = {IEEE Signal Processing Magazine},
   shortjournal = {IEEE Signal Processing Magazine},
   volume = {32},
   number = {6},
@@ -27,7 +27,7 @@
   title = {Fast and {{Accurate Spectrum Estimation}} via {{Virtual Coarray Interpolation Based}} on {{Truncated Nuclear Norm Regularization}}},
   author = {Fan, Qing and Liu, Yu and Yang, Tao and Peng, Hao},
   date = {2022},
-  journaltitle = {IEEE Signal Processing Letters},
+  journal = {IEEE Signal Processing Letters},
   shortjournal = {Ieee Signal Proc Let},
   volume = {29},
   pages = {169--173},
@@ -39,7 +39,7 @@
   title = {Discovering Faster Matrix Multiplication Algorithms with Reinforcement Learning},
   author = {Fawzi, Alhussein and Balog, Matej and Huang, Aja and Hubert, Thomas and Romera-Paredes, Bernardino and Barekatain, Mohammadamin and Novikov, Alexander and R. Ruiz, Francisco J. and Schrittwieser, Julian and Swirszcz, Grzegorz and Silver, David and Hassabis, Demis and Kohli, Pushmeet},
   date = {2022-10},
-  journaltitle = {Nature},
+  journal = {Nature},
   shortjournal = {Nature},
   volume = {610},
   number = {7930},
@@ -72,7 +72,7 @@
   title = {Alternating {{Direction Method}} with {{Self-Adaptive Penalty Parameters}} for {{Monotone Variational Inequalities}}},
   author = {He, B. S. and Yang, H. and Wang, S. L.},
   date = {2000-08},
-  journaltitle = {Journal of Optimization Theory and Applications},
+  journal = {Journal of Optimization Theory and Applications},
   shortjournal = {Journal of Optimization Theory and Applications},
   volume = {106},
   number = {2},
@@ -85,11 +85,12 @@
   title = {Fast and {{Accurate Matrix Completion}} via {{Truncated Nuclear Norm Regularization}}},
   author = {Hu, Yao and Zhang, Debing and Ye, Jieping and Li, Xuelong and He, Xiaofei},
   date = {2013-09},
-  journaltitle = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
   shortjournal = {Ieee T Pattern Anal},
   volume = {35},
   number = {9},
   pages = {2117--2130},
+  year = {2013},
   issn = {1939-3539},
   eventtitle = {{{IEEE Transactions}} on {{Pattern Analysis}} and {{Machine Intelligence}}}
 }
@@ -100,6 +101,7 @@
   author = {Jain, Prateek and Meka, Raghu and Dhillon, Inderjit},
   date = {2010},
   volume = {23},
+  year = {2010},
   publisher = {{Curran Associates, Inc.}}
 }
 
@@ -110,6 +112,7 @@
   date = {2009-06},
   pages = {324--328},
   issn = {2157-8117},
+  year = {2009},
   eventtitle = {2009 {{IEEE International Symposium}} on {{Information Theory}}}
 }
 
@@ -117,7 +120,7 @@
   title = {A {{Gradient Descent Algorithm}} on the {{Grassman Manifold}} for {{Matrix Completion}}},
   author = {Keshavan, Raghunandan H. and Oh, Sewoong},
   date = {2013-03},
-  journaltitle = {Transportation Research Part C: Emerging Technologies},
+  journal = {Transportation Research Part C: Emerging Technologies},
   shortjournal = {Transportation Research Part C: Emerging Technologies},
   volume = {28},
   eprint = {0910.5260},
@@ -131,7 +134,7 @@
   title = {Learning the Parts of Objects by Non-Negative Matrix Factorization},
   author = {Lee, Daniel D. and Seung, H. Sebastian},
   date = {1999-10},
-  journaltitle = {Nature},
+  journal = {Nature},
   shortjournal = {Nature},
   volume = {401},
   number = {6755},
@@ -147,7 +150,7 @@
   shorttitle = {{{randUTV}}},
   author = {Martinsson, P. G. and Quintana-Ortí, G. and Heavner, N.},
   date = {2019-03-14},
-  journaltitle = {ACM Transactions on Mathematical Software},
+  journal = {ACM Transactions on Mathematical Software},
   shortjournal = {Acm T Math Software},
   volume = {45},
   number = {1},
@@ -159,7 +162,7 @@
   title = {System-{{Level Analysis}} of {{Joint Sensing}} and {{Communication Based}} on {{5G New Radio}}},
   author = {Pucci, Lorenzo and Paolini, Enrico and Giorgetti, Andrea},
   date = {2022-07},
-  journaltitle = {IEEE Journal on Selected Areas in Communications},
+  journal = {IEEE Journal on Selected Areas in Communications},
   shortjournal = {Ieee J Sel Area Comm},
   volume = {40},
   number = {7},
@@ -172,7 +175,7 @@
   title = {A {{DEIM Induced CUR Factorization}}},
   author = {Sorensen, D. C. and Embree, Mark},
   date = {2016-01},
-  journaltitle = {SIAM Journal on Scientific Computing},
+  journal = {SIAM Journal on Scientific Computing},
   shortjournal = {SIAM J. Sci. Comput.},
   volume = {38},
   number = {3},
@@ -185,7 +188,7 @@
   title = {Regression {{Shrinkage}} and {{Selection Via}} the {{Lasso}}},
   author = {Tibshirani, Robert},
   date = {1996},
-  journaltitle = {Journal of the Royal Statistical Society: Series B (Methodological)},
+  journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
   shortjournal = {Journal of the Royal Statistical Society: Series B (Methodological)},
   volume = {58},
   number = {1},
@@ -210,7 +213,7 @@
   title = {Sparse {{Principal Component Analysis}}},
   author = {Zou, Hui and Hastie, Trevor and Tibshirani, Robert},
   date = {2006-06-01},
-  journaltitle = {Journal of Computational and Graphical Statistics},
+  journal = {Journal of Computational and Graphical Statistics},
   shortjournal = {J Comput Graph Stat},
   volume = {15},
   number = {2},
