:sunglasses:fix ref

--- a/report/report.tex
+++ b/report/report.tex
@@ -929,17 +929,9 @@ In some situations, Some pixels in the image have been broken. We first mask all
 
 
 
-\section*{References}
+%\section*{References}
 
-
-References follow the acknowledgments. Use unnumbered first-level heading for
-the references. Any choice of citation style is acceptable as long as you are
-consistent. It is permissible to reduce the font size to \verb+small+ (9 point)
-when listing the references.
-Note that the Reference section does not count towards the page limit.
 \medskip
-
-
 {\small{}\bibliographystyle{plain}
 \bibliography{report}
 }{\small\par}
