--- a/report/report.bib
+++ b/report/report.bib
@@ -1,224 +1,100 @@
+@article{beck2009fast,
+  title     = {A fast iterative shrinkage-thresholding algorithm for linear inverse problems},
+  author    = {Beck, Amir and Teboulle, Marc},
+  journal   = {SIAM journal on imaging sciences},
+  volume    = {2},
+  number    = {1},
+  pages     = {183--202},
+  year      = {2009},
+  publisher = {SIAM}
+}
+
+@article{boyd2011distributed,
+  title     = {Distributed optimization and statistical learning via the alternating direction method of multipliers},
+  author    = {Boyd, Stephen and Parikh, Neal and Chu, Eric and Peleato, Borja and Eckstein, Jonathan and others},
+  journal   = {Foundations and Trends{\textregistered} in Machine learning},
+  volume    = {3},
+  number    = {1},
+  pages     = {1--122},
+  year      = {2011},
+  publisher = {Now Publishers, Inc.}
+}
+
 @misc{cai.shen200810,
-  title = {A {{Singular Value Thresholding Algorithm}} for {{Matrix Completion}}},
-  author = {Cai, Jian-Feng and Candes, Emmanuel J. and Shen, Zuowei},
-  date = {2008-10-17},
-  number = {arXiv:0810.3286},
-  eprint = {0810.3286},
-  eprinttype = {arxiv},
-  publisher = {{arXiv}},
+  title         = {A {{Singular Value Thresholding Algorithm}} for {{Matrix Completion}}},
+  author        = {Cai, Jian-Feng and Candes, Emmanuel J. and Shen, Zuowei},
+  date          = {2008-10-17},
+  number        = {arXiv:0810.3286},
+  eprint        = {0810.3286},
+  eprinttype    = {arxiv},
+  publisher     = {{arXiv}},
   archiveprefix = {arXiv}
 }
 
-@article{dokmanic.vetterli201511,
-  title = {Euclidean {{Distance Matrices}}: {{Essential}} Theory, Algorithms, and Applications},
-  shorttitle = {Euclidean {{Distance Matrices}}},
-  author = {Dokmanic, Ivan and Parhizkar, Reza and Ranieri, Juri and Vetterli, Martin},
-  date = {2015-11},
-  journal = {IEEE Signal Processing Magazine},
-  shortjournal = {IEEE Signal Processing Magazine},
-  volume = {32},
-  number = {6},
-  pages = {12--30},
-  issn = {1558-0792},
-  eventtitle = {{{IEEE Signal Processing Magazine}}}
-}
-
-@article{fan.peng2022,
-  title = {Fast and {{Accurate Spectrum Estimation}} via {{Virtual Coarray Interpolation Based}} on {{Truncated Nuclear Norm Regularization}}},
-  author = {Fan, Qing and Liu, Yu and Yang, Tao and Peng, Hao},
-  date = {2022},
-  journal = {IEEE Signal Processing Letters},
-  shortjournal = {Ieee Signal Proc Let},
-  volume = {29},
-  pages = {169--173},
-  issn = {1558-2361},
-  eventtitle = {{{IEEE Signal Processing Letters}}}
-}
-
-@article{fawzi.kohli202210,
-  title = {Discovering Faster Matrix Multiplication Algorithms with Reinforcement Learning},
-  author = {Fawzi, Alhussein and Balog, Matej and Huang, Aja and Hubert, Thomas and Romera-Paredes, Bernardino and Barekatain, Mohammadamin and Novikov, Alexander and R. Ruiz, Francisco J. and Schrittwieser, Julian and Swirszcz, Grzegorz and Silver, David and Hassabis, Demis and Kohli, Pushmeet},
-  date = {2022-10},
-  journal = {Nature},
-  shortjournal = {Nature},
-  volume = {610},
-  number = {7930},
-  pages = {47--53},
-  publisher = {{Nature Publishing Group}},
-  issn = {1476-4687},
-  issue = {7930},
-  langid = {english}
-}
-
-@article{fazel.fazel,
-  title = {Matrix {{Rank Minimization}} with {{Applications}}},
+@phdthesis{fazel2002matrix,
+  title  = {Matrix rank minimization with applications},
   author = {Fazel, Maryam},
-  pages = {45},
-  langid = {english}
+  year   = {2002},
+  school = {PhD thesis, Stanford University}
 }
 
-@misc{gillis.gillis201403,
-  title = {The {{Why}} and {{How}} of {{Nonnegative Matrix Factorization}}},
-  author = {Gillis, Nicolas},
-  date = {2014-03-07},
-  number = {arXiv:1401.5226},
-  eprint = {1401.5226},
-  eprinttype = {arxiv},
-  publisher = {{arXiv}},
-  archiveprefix = {arXiv}
-}
-
-@article{he.wang200008,
-  title = {Alternating {{Direction Method}} with {{Self-Adaptive Penalty Parameters}} for {{Monotone Variational Inequalities}}},
-  author = {He, B. S. and Yang, H. and Wang, S. L.},
-  date = {2000-08},
-  journal = {Journal of Optimization Theory and Applications},
-  shortjournal = {Journal of Optimization Theory and Applications},
-  volume = {106},
-  number = {2},
-  pages = {337--356},
-  issn = {0022-3239, 1573-2878},
-  langid = {english}
+@article{he2012alternating,
+  title     = {Alternating direction method with Gaussian back substitution for separable convex programming},
+  author    = {He, Bingsheng and Tao, Min and Yuan, Xiaoming},
+  journal   = {SIAM Journal on Optimization},
+  volume    = {22},
+  number    = {2},
+  pages     = {313--340},
+  year      = {2012},
+  publisher = {SIAM}
 }
 
 @article{hu.he201309,
-  title = {Fast and {{Accurate Matrix Completion}} via {{Truncated Nuclear Norm Regularization}}},
-  author = {Hu, Yao and Zhang, Debing and Ye, Jieping and Li, Xuelong and He, Xiaofei},
-  date = {2013-09},
-  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  title        = {Fast and {{Accurate Matrix Completion}} via {{Truncated Nuclear Norm Regularization}}},
+  author       = {Hu, Yao and Zhang, Debing and Ye, Jieping and Li, Xuelong and He, Xiaofei},
+  date         = {2013-09},
+  journal      = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
   shortjournal = {Ieee T Pattern Anal},
-  volume = {35},
-  number = {9},
-  pages = {2117--2130},
-  year = {2013},
-  issn = {1939-3539},
-  eventtitle = {{{IEEE Transactions}} on {{Pattern Analysis}} and {{Machine Intelligence}}}
+  volume       = {35},
+  number       = {9},
+  pages        = {2117--2130},
+  year         = {2013},
+  issn         = {1939-3539},
+  eventtitle   = {{{IEEE Transactions}} on {{Pattern Analysis}} and {{Machine Intelligence}}}
 }
 
 @inproceedings{jain.dhillon2010,
-  title = {Guaranteed {{Rank Minimization}} via {{Singular Value Projection}}},
+  title     = {Guaranteed {{Rank Minimization}} via {{Singular Value Projection}}},
   booktitle = {Advances in {{Neural Information Processing Systems}}},
-  author = {Jain, Prateek and Meka, Raghu and Dhillon, Inderjit},
-  date = {2010},
-  volume = {23},
-  year = {2010},
+  author    = {Jain, Prateek and Meka, Raghu and Dhillon, Inderjit},
+  date      = {2010},
+  volume    = {23},
+  year      = {2010},
   publisher = {{Curran Associates, Inc.}}
 }
 
 @inproceedings{keshavan.montanari200906,
-  title = {Matrix Completion from a Few Entries},
-  booktitle = {2009 {{IEEE International Symposium}} on {{Information Theory}}},
-  author = {Keshavan, Raghunandan H. and Oh, Sewoong and Montanari, Andrea},
-  date = {2009-06},
-  pages = {324--328},
-  issn = {2157-8117},
-  year = {2009},
+  title      = {Matrix Completion from a Few Entries},
+  booktitle  = {2009 {{IEEE International Symposium}} on {{Information Theory}}},
+  author     = {Keshavan, Raghunandan H. and Oh, Sewoong and Montanari, Andrea},
+  date       = {2009-06},
+  pages      = {324--328},
+  issn       = {2157-8117},
+  year       = {2009},
   eventtitle = {2009 {{IEEE International Symposium}} on {{Information Theory}}}
 }
 
-@article{keshavan.oh201303,
-  title = {A {{Gradient Descent Algorithm}} on the {{Grassman Manifold}} for {{Matrix Completion}}},
-  author = {Keshavan, Raghunandan H. and Oh, Sewoong},
-  date = {2013-03},
-  journal = {Transportation Research Part C: Emerging Technologies},
-  shortjournal = {Transportation Research Part C: Emerging Technologies},
-  volume = {28},
-  eprint = {0910.5260},
-  eprinttype = {arxiv},
-  pages = {15--27},
-  issn = {0968090X},
-  archiveprefix = {arXiv}
+@article{lin2011linearized,
+  title   = {Linearized alternating direction method with adaptive penalty for low-rank representation},
+  author  = {Lin, Zhouchen and Liu, Risheng and Su, Zhixun},
+  journal = {Advances in neural information processing systems},
+  volume  = {24},
+  year    = {2011}
 }
 
-@article{lee.seung199910,
-  title = {Learning the Parts of Objects by Non-Negative Matrix Factorization},
-  author = {Lee, Daniel D. and Seung, H. Sebastian},
-  date = {1999-10},
-  journal = {Nature},
-  shortjournal = {Nature},
-  volume = {401},
-  number = {6755},
-  pages = {788--791},
-  publisher = {{Nature Publishing Group}},
-  issn = {1476-4687},
-  issue = {6755},
-  langid = {english}
-}
-
-@article{martinsson.heavner201903,
-  title = {{{randUTV}}: {{A Blocked Randomized Algorithm}} for {{Computing}} a {{Rank-Revealing UTV Factorization}}},
-  shorttitle = {{{randUTV}}},
-  author = {Martinsson, P. G. and Quintana-Ortí, G. and Heavner, N.},
-  date = {2019-03-14},
-  journal = {ACM Transactions on Mathematical Software},
-  shortjournal = {Acm T Math Software},
-  volume = {45},
-  number = {1},
-  pages = {4:1--4:26},
-  issn = {0098-3500}
-}
-
-@article{pucci.giorgetti202207,
-  title = {System-{{Level Analysis}} of {{Joint Sensing}} and {{Communication Based}} on {{5G New Radio}}},
-  author = {Pucci, Lorenzo and Paolini, Enrico and Giorgetti, Andrea},
-  date = {2022-07},
-  journal = {IEEE Journal on Selected Areas in Communications},
-  shortjournal = {Ieee J Sel Area Comm},
-  volume = {40},
-  number = {7},
-  pages = {2043--2055},
-  issn = {1558-0008},
-  eventtitle = {{{IEEE Journal}} on {{Selected Areas}} in {{Communications}}}
-}
-
-@article{sorensen.embree201601,
-  title = {A {{DEIM Induced CUR Factorization}}},
-  author = {Sorensen, D. C. and Embree, Mark},
-  date = {2016-01},
-  journal = {SIAM Journal on Scientific Computing},
-  shortjournal = {SIAM J. Sci. Comput.},
-  volume = {38},
-  number = {3},
-  pages = {A1454-A1482},
-  issn = {1064-8275, 1095-7197},
-  langid = {english}
-}
-
-@article{tibshirani.tibshirani1996,
-  title = {Regression {{Shrinkage}} and {{Selection Via}} the {{Lasso}}},
-  author = {Tibshirani, Robert},
-  date = {1996},
-  journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
-  shortjournal = {Journal of the Royal Statistical Society: Series B (Methodological)},
-  volume = {58},
-  number = {1},
-  pages = {267--288},
-  issn = {2517-6161},
-  langid = {english},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.2517-6161.1996.tb02080.x}
-}
-
-@thesis{wang.wang2017,
-  type = {博士学位论文},
-  title = {基于稀疏表示理论的数据采集与恢复},
-  author = {王, 乐乐},
-  date = {2017},
-  institution = {{湖南大学}},
-  editora = {谢, 鲲},
-  editoratype = {collaborator},
-  langid = {zh-CN}
-}
-
-@article{zou.tibshirani200606,
-  title = {Sparse {{Principal Component Analysis}}},
-  author = {Zou, Hui and Hastie, Trevor and Tibshirani, Robert},
-  date = {2006-06-01},
-  journal = {Journal of Computational and Graphical Statistics},
-  shortjournal = {J Comput Graph Stat},
-  volume = {15},
-  number = {2},
-  pages = {265--286},
-  publisher = {{Taylor \& Francis}},
-  issn = {1061-8600},
-  annotation = {\_eprint: https://doi.org/10.1198/106186006X113430}
+@book{von1937some,
+  title     = {Some matrix-inequalities and metrization of matric space},
+  author    = {Von Neumann, John},
+  year      = {1937},
+  publisher = {Pergamon Press}
 }
